--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -6,10 +6,11 @@
   margin-top: auto;
   border-top: 1px solid rgba(124, 137, 139, 0.2);
   width: 100vw;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
   z-index: 1;
   backdrop-filter: blur(8px);
 }
@@ -34,10 +35,11 @@
   .site-footer {
     padding: 0.8rem 0;
     width: 100vw;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
   }
   
   .footer-content {
@@ -53,10 +55,11 @@
   .site-footer {
     padding: 0.6rem 0;
     width: 100vw;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
   }
   
   .footer-text {
